Fix problems identify by tox

--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ ignore_errors = True
 commands =
      flake8 nexia
      pylint nexia
-     mypy nexia
+     mypy --check-untyped-defs nexia
 
 [flake8]
 max-line-length = 120
